--- a/tasks.json
+++ b/tasks.json
@@ -1,10 +1,10 @@
 {
     "tasks": [
         {
-            "email": "zhaoolee@gmail.com"
+            "email": "2878181422@qq.com"
         },
         {
-            "email": "zhaoolee@foxmail.com"
+            "email": "renfei0301@gmail.com"
         }
     ]
 }
